--- a/ECMA5/브라우저객체.html
+++ b/ECMA5/브라우저객체.html
@@ -10,6 +10,9 @@
 <script>
 
     window.location.href = "http://www.newlecture.com";
+    console.log(window.location.port);
+    console.log(window.location.h);
+    console.log(window.location.port);
 
 
 </script>
