--- a/JavaScript/game2/main.html
+++ b/JavaScript/game2/main.html
@@ -7,21 +7,24 @@
 <script src="./item/boy.js"></script>
 <script src="./panel/game-canvas.js"></script>
 <script src="app.js"></script>
-<script>
+<!-- <script>
 	let kor=30;
 	let eng=30;
 	let obj= {
 		kor:kor,
 		eng:eng,
-		total: function(){
+		total: function(){			
 			return this.kor+this.eng;
 		}
 	}
+	
+		
 
 	function print(exam){
+		total = exam.total;
 		console.log("kor:"+exam.kor);
 		console.log("eng:"+exam.eng);
-		// console.log("total:"+exam.total());
+		console.log("total:"+total());
 	}
 	print(obj);
 
@@ -34,7 +37,7 @@
 
 		console.log("kor:"+kor);
 		console.log("eng:"+eng);
-		
+				
 	}
 
 	print1(obj1);
@@ -51,7 +54,7 @@
 	
 
 
-</script>
+</script> -->
 </head>
 <body>
 	<!-- <img src="boy.png"> -->
