--- a/JavaScript/game2/main.html
+++ b/JavaScript/game2/main.html
@@ -7,6 +7,7 @@
 <script src="./item/boy.js"></script>
 <script src="./panel/game-canvas.js"></script>
 <script src="app.js"></script>
+<!-- <script src="ex1-es6-var.js"></script> -->
 <!-- <script>
 	let kor=30;
 	let eng=30;
