Add 20230106 Study Half

--- a/JavaScript/game2/main.html
+++ b/JavaScript/game2/main.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-<script src="./item/back-ground.js"></script>
 <script src="./item/boy.js"></script>
+<script src="./item/back-ground.js"></script>
 <script src="./panel/game-canvas.js"></script>
 <script src="app.js"></script>
 <!-- <script src="ex1-es6-var.js"></script> -->
@@ -59,6 +59,8 @@
 </head>
 <body>
 	<!-- <img src="boy.png"> -->
+	<img src="boy.png" id="boy" style="display : none;">
+	<img src="map.png" id="bg" style="display : none;">
 	<canvas class="game-canvas" width="700" height="600"></canvas>
 </body>
 </html>
