--- a/JavaScript/연습,기록용/prac20221229.html
+++ b/JavaScript/연습,기록용/prac20221229.html
@@ -59,8 +59,7 @@ var user = {name:'LJJ', age:27, addr:'SEOUL'};
 console.log(user.addr);
 console.log(user.age);
 
-var obj =
-[
+var obj =[
     {"sgg_cd":"1111000000","emd_nm":"경운동","node_code":"0","emd_cd":"1111013400","node_wkt":"POINT(126.98515892357797 37.57622646659184)","sgg_nm":"종로구","type":"NODE","sw_nm":"안국","sw_cd":"269","node_id":211632},
     {"sgg_cd":"1111000000","emd_nm":"묘동","node_code":"1","emd_cd":"1111015100","node_wkt":"POINT(126.99189784557106 37.57254045459208)","sgg_nm":"종로구","type":"NODE","sw_nm":null,"sw_cd":null,"node_id":135561},
     {"sgg_cd":"1111000000","emd_nm":"돈의동","node_code":"1","emd_cd":"1111015300","node_wkt":"POINT(126.99104038125857 37.572655707708435)","sgg_nm":"종로구","type":"NODE","sw_nm":null,"sw_cd":null,"node_id":135567}
