--- a/JavaScript/game2/main.html
+++ b/JavaScript/game2/main.html
@@ -61,6 +61,6 @@
 	<!-- <img src="boy.png"> -->
 	<img src="boy.png" id="boy" style="display : none;">
 	<img src="map.png" id="bg" style="display : none;">
-	<canvas class="game-canvas" width="700" height="600"></canvas>
+	<canvas tabindex="0" class="game-canvas" width="700" height="600"></canvas>
 </body>
 </html>
