--- a/JavaScript/game2/main.html
+++ b/JavaScript/game2/main.html
@@ -3,11 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
-<script src="./item/boy.js"></script>
+<!-- <script src="./item/boy.js"></script>
+<script src="./item/enemy.js"></script>
 <script src="./item/back-ground.js"></script>
-<script src="./panel/game-canvas.js"></script>
-<script src="app.js"></script>
+<script src="./panel/game-canvas.js"></script> -->
+<script type="module" src="app.js"></script>
 <!-- <script src="ex1-es6-var.js"></script> -->
+<!-- <script type="module" src="./ex2-es6-module.js"></script> -->
 <!-- <script>
 	let kor=30;
 	let eng=30;
@@ -61,6 +63,7 @@
 	<!-- <img src="boy.png"> -->
 	<img src="boy.png" id="boy" style="display : none;">
 	<img src="map.png" id="bg" style="display : none;">
+	<img src="enemy.png" id="enemy" style="display : none;">
 	<canvas tabindex="0" class="game-canvas" width="700" height="600"></canvas>
 </body>
 </html>
