--- a/FTGPrj/index.html
+++ b/FTGPrj/index.html
@@ -8,8 +8,11 @@
     <script type="module" src="./app.js"></script>
 </head>
 <body>
-    <canvas class="game-canvas" width="1920" height="1080" style = "display: none;"></canvas>    
-    <canvas class="story-canvas" width="1920" height="1080" ></canvas>
-    <img src="./img/Title.jpg" id="title">
+    <canvas class="game-canvas" width="1400" height="700" style = "display: none;"></canvas>    
+    <canvas class="story-canvas" width="1400" height="700"></canvas>    
+    <img src="./img/Title.jpg" id="title" style = "display: none;">
+    <img src="./img/S1.jpg" id="S1" style = "display: none;">
+    <img src="./img/back.jpg" id="back" style = "display: none;">
+    <img src="./img/forward.jpg" id="forward" style = "display: none;">
 </body>
 </html>
