--- a/JavaScript/game2/main.html
+++ b/JavaScript/game2/main.html
@@ -64,6 +64,7 @@
 	<img src="boy.png" id="boy" style="display : none;">
 	<img src="map.png" id="bg" style="display : none;">
 	<img src="enemy.png" id="enemy" style="display : none;">
+	<img src="explosion.jpg" id="explosion" style="display : none;">
 	<canvas tabindex="0" class="game-canvas" width="700" height="600"></canvas>
 </body>
 </html>
