--- a/FTGPrj/index.html
+++ b/FTGPrj/index.html
@@ -8,11 +8,23 @@
     <script type="module" src="./app.js"></script>
 </head>
 <body>
-    <canvas class="game-canvas" width="1400" height="700" style = "display: none;"></canvas>    
-    <canvas class="story-canvas" width="1400" height="700"></canvas>    
     <img src="./img/Title.jpg" id="title" style = "display: none;">
     <img src="./img/S1.jpg" id="S1" style = "display: none;">
-    <img src="./img/back.jpg" id="back" style = "display: none;">
-    <img src="./img/forward.jpg" id="forward" style = "display: none;">
+    <img src="./img/S2.jpg" id="S2" style = "display: none;">
+    <img src="./img/S3.jpg" id="S3" style = "display: none;">
+    <img src="./img/S4.jpg" id="S4" style = "display: none;">
+    <img src="./img/S5.jpg" id="S5" style = "display: none;">
+    <img src="./img/S6.jpg" id="S6" style = "display: none;">
+    <img src="./img/S7.jpg" id="S7" style = "display: none;">
+    <img src="./img/S8.jpg" id="S8" style = "display: none;">
+
+    <div>
+        <canvas class="game-canvas" width="1400" height="700" style = "display: none;"></canvas>    
+        <canvas class="story-canvas" width="1400" height="700"></canvas>    
+    </div>
+    <div >
+        <button type="button" id="backbtn" name="back">이전</button>
+        <button type="button" id="forwardbtn" name="forward">다음</button>
+    </div>
 </body>
 </html>
