--- a/JavaScript/game2/main.html
+++ b/JavaScript/game2/main.html
@@ -66,5 +66,6 @@
 	<img src="enemy.png" id="enemy" style="display : none;">
 	<img src="explosion.jpg" id="explosion" style="display : none;">
 	<canvas tabindex="0" class="game-canvas" width="700" height="600"></canvas>
+	<canvas tabindex="1" class="rank-canvas" width="700" height="600"></canvas>
 </body>
 </html>
