--- a/FTGPrj/index.html
+++ b/FTGPrj/index.html
@@ -8,6 +8,8 @@
     <script type="module" src="./app.js"></script>
 </head>
 <body>
+    <img src="./img/fwdbtnimg.png" id="forwardbtn" style = "display: none";>
+    <img src="./img/fwdbtnhoverimg.png" id="fwdhoverbtn" style = "display: none";>
     <img src="./img/Title.jpg" id="title" style = "display: none;">
     <img src="./img/S1.jpg" id="S1" style = "display: none;">
     <img src="./img/S2.jpg" id="S2" style = "display: none;">
@@ -16,8 +18,8 @@
     <img src="./img/S5.jpg" id="S5" style = "display: none;">
     <img src="./img/S6.jpg" id="S6" style = "display: none;">
     <img src="./img/S7.jpg" id="S7" style = "display: none;">
-    
-    <audio src="./audio/testaudio1.mp3" id="tsaudio" controls="controls"></audio>
+<!--     
+    <audio src="./audio/testaudio1.mp3" id="tsaudio"></audio> -->
 
     
     <canvas class="game-canvas" width="1400" height="700" style = "display: none;"></canvas>    
