--- a/JavaScript/game2/main.html
+++ b/JavaScript/game2/main.html
@@ -9,6 +9,15 @@
 <script src="./panel/game-canvas.js"></script> -->
 <script type="module" src="app.js"></script>
 <!-- <script src="ex1-es6-var.js"></script> -->
+<style>
+	.d-none{
+		display: none;
+	}
+
+	body{
+		margin : 0;
+	}
+</style>
 <!-- <script type="module" src="./ex2-es6-module.js"></script> -->
 <!-- <script>
 	let kor=30;
@@ -66,6 +75,6 @@
 	<img src="enemy.png" id="enemy" style="display : none;">
 	<img src="explosion.jpg" id="explosion" style="display : none;">
 	<canvas tabindex="0" class="game-canvas" width="700" height="600"></canvas>
-	<canvas tabindex="1" class="rank-canvas" width="700" height="600"></canvas>
+	<canvas tabindex="1" class="rank-canvas d-none" width="700" height="600"></canvas>
 </body>
 </html>
