Add CSS Study 20230128 2

--- a/CSS/index.html
+++ b/CSS/index.html
@@ -12,8 +12,11 @@
   </style>
 </head>
 <body>
-  <h1 class="soft" lang="ko">알랜드</h1>
-  <h2 id="subtitle" class="soft">알랜드알랜드</h2>
+  <header class="header"></header>
+
+  <nav class="cafe"></nav>
+
+  <section class="rland"></section>
 
 
 </body>
