--- a/Final/es6/ex1/index.html
+++ b/Final/es6/ex1/index.html
@@ -5,8 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script src="box.js" defer></script>
-  <script src="shape.js" defer></script>  
+  <!-- <script src="box.js" defer></script>
+  <script src="shape.js" defer></script>   -->
+  <script src="summary.js"></script>
 </head>
 <body>
   <!-- <canvas width =""></canvas> -->
